<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright © 2019-2024 Forb Yuan
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>win.doyto</groupId>
        <artifactId>doyto-oss-parent</artifactId>
        <version>5</version>
    </parent>

    <artifactId>doyto-query-memorydb-repo</artifactId>
    <name>DoytoQueryMemoryDBRepository</name>
    <packaging>pom</packaging>
    <version>${revision}</version>
    <url>https://www.doyto.win/</url>

    <properties>
        <revision>2.0.1-SNAPSHOT</revision>

        <java.version>17</java.version>
        <spring-boot.version>3.3.1</spring-boot.version>
        <sourceDirectory>src/main/java</sourceDirectory>

        <maven.deploy.skip>true</maven.deploy.skip>
        <jacoco.destFile>${user.dir}/target/jacoco.exec</jacoco.destFile>
        <jacoco.dataFile>${user.dir}/target/jacoco.exec</jacoco.dataFile>
    </properties>

    <modules>
        <module>doyto-query-memorydb</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>win.doyto</groupId>
                <artifactId>doyto-query-api</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>win.doyto</groupId>
                <artifactId>doyto-query-common</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>win.doyto</groupId>
                <artifactId>doyto-query-sql</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>win.doyto</groupId>
                <artifactId>doyto-query-test</artifactId>
                <version>${revision}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <sourceDirectory>${sourceDirectory}</sourceDirectory>
        <testResources>
            <testResource>
                <directory>./src/test/java</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/*.json</include>
                </includes>
            </testResource>
            <testResource>
                <directory>./src/test/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/*.yml</include>
                    <include>**/*.sql</include>
                    <include>**/*.xml</include>
                    <include>**/*.json</include>
                    <include>**/*.properties</include>
                </includes>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <testSource>${java.version}</testSource>
                    <testTarget>${java.version}</testTarget>
                    <fork>true</fork>
                    <compilerArgs>
                        <arg>-parameters</arg>
                        <arg>-Xlint:unchecked</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <!-- 更新pom版本号-->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.6.0</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>ossrh</flattenMode>
                    <flattenedPomFilename>target/${project.artifactId}.pom.xml</flattenedPomFilename>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <scm child.scm.connection.inherit.append.path="false" child.scm.developerConnection.inherit.append.path="false" child.scm.url.inherit.append.path="false">
        <tag>main</tag>
        <url>https://github.com/doytowin/doyto-query-memorydb</url>
        <connection>scm:git:https://github.com/doytowin/doyto-query-memorydb.git</connection>
        <developerConnection>scm:git:https://github.com/doytowin/doyto-query-memorydb.git</developerConnection>
    </scm>
</project>